--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -3,7 +3,9 @@
 
 
 
-
+a{
+    color: rgb(9,18,58);
+}
 
 .nav-tabs{
 	width: 30%;
@@ -37,6 +39,23 @@
     float: left;
     height: 100vh;
 }
+
+.linha {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    margin-bottom: 30px;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #160150;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 16px;
+    color: rgb(83, 80, 80);
+    width: 450px;
+  }
 
 .font-20{
     font-size: 20pt;
