--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -61,7 +61,7 @@
       <li class="form-inline ml-5 text-center">
         <a routerLink="/tema" class="text-muted">
           <i class="fa fa-newspaper-o fa-lg" aria-hidden="true">
-            <p class="m-0">Postagem por Tema</p>
+            <p class="m-0">Temas</p>
           </i>
         </a>
       </li>
