--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -65,6 +65,11 @@
         <div class="footer-copyright text-center">
           <span class="text-light">furando a bolha ©</span>
         </div>
+        <div class="footer-copyright text-center">
+          <a href="">
+            <span class="text-light">Sobre nós</span>
+          </a>
+        </div>
       </div>
     </div>
   </div>
