--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -59,7 +59,7 @@
       </li>
 
       <li class="form-inline ml-5 text-center">
-        <a routerLink="/tema" class="text-muted">
+        <a routerLink="/temas" class="text-muted">
           <i class="fa fa-newspaper-o fa-lg" aria-hidden="true">
             <p class="m-0">Temas</p>
           </i>
