--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -30,6 +30,15 @@
               placeholder="Digite a descrição do tema"
             />
           </div>
+          <div class="form-group">
+            <input
+              [(ngModel)]="tema.palavraChave"
+              type="text"
+              class="linha"
+              id="palavraChave"
+              placeholder="Digite o link da foto"
+            />
+          </div>
 
           <div class="d-flex justify-content-center">
             <button class="btn btn-outline-light" (click)="cadastrar()">
