implementando Sobre Nós

--- a/src/app/sobre-nos/sobre-nos.component.css
+++ b/src/app/sobre-nos/sobre-nos.component.css
@@ -65,6 +65,7 @@ h1 {
     display: inline-block;
     margin: 30px;
     text-align: left;
+    transform: translateX();
 }
 
 /* SE TIRAR, FICA TRANSPARENTE..*/
@@ -82,7 +83,7 @@ h1 {
     left: 0;
     transition: top .3s, left .3s, width .3s .3s, height .3s .3s, border-radius .3s .45s;
     ;
-    transform: translateY(40px);
+
     transition: ease-in;
     
 }
@@ -147,10 +148,10 @@ h1 {
     left: 10px;
     width: var(--main-width-card-mini);
     height: var(--main-width-card-mini);
-    transform: scale(0.30);
+    transform: scale(0.30) translate(-160px, -160px);
     border-radius: 50%;
-    transition-timing-function: ease-in;
-
+    transition-timing-function: ease-in-out;
+    
 }
 
 /* HOVER - FAZ O TEXTO SUBIR + POSIÇÃO DA FOTO*/
