--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -6,7 +6,10 @@
     <!-- SERVIRÁ PARA ALGUMA COISA??
         <div id="avatar">
     svg boneco(colocar as fotos??) 
-    </div>   -->
+    </div>  
+
+    translate(-160px, -160px)
+-->
 
     <!-- Dentro da div main: 
         -criar a parte do js(perfil de cada um)-->
