--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -130,8 +130,24 @@
             </div>
             <div class="font-20 text-left">{{ item.titulo }}</div>
             <div class="m-12 text-left">{{ item.texto }}</div>
+            <div class="m-12 text-left mudaFonte">
+              <button (click)="getPostagemById()" (click)='curtida(item.id)' class="mudaFonte">
+                <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+              </button>
+              Curtidas: {{ item.curtidas }}
+              <button (click)="getPostagemById()" (click)='descurtida(item.id)' class="mudaFonte">
+                <i class="fa fa-thumbs-down" aria-hidden="true"></i>
+              </button>
+            </div>
+
             <!--LEMBRAR DE APAGAR OS PEIXES E GATOS DO ASSETS DE ARTUR-->
-            <div><img src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png" width="100px" height="50px" /></div>
+            <div>
+              <img
+                src="https://media.discordapp.net/attachments/890758555806859317/898339228482678824/TIA_CELINA_6.png"
+                width="100px"
+                height="50px"
+              />
+            </div>
           </section>
         </div>
       </div>
@@ -139,18 +155,6 @@
     </div>
     <!--Fim do Feed-->
 
-
-
-
-
-
-
-
-
-
-
-
-    
     <!-- Modal -->
     <div
       class="modal fade"
@@ -160,7 +164,7 @@
       aria-labelledby="TituloModalCentralizado"
       aria-hidden="true"
     >
-      <div class="modal-dialog modal-dialog-centered " role="document">
+      <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="TituloModalCentralizado">
