--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -34,6 +34,9 @@
             type="search"
             placeholder="Postagem por tema"
             aria-label="Pesquisar"
+            [(ngModel)]='tituloPost'
+            
+            (click)='pesquisarProdutos(tituloPost)'
           />
           <a href="" class="fontBlue">
             <img
@@ -87,7 +90,7 @@
 
     <ul class="navbar-nav ml-auto d-flex align-items-center mt-3">
       <li class="nav-item pl-3">
-        <a (click)="sair()" class="m-0 font-weight-bold fs-16 text-muted">
+        <a [routerLink]="['/sobre-nos']" class="m-0 font-weight-bold fs-16 text-muted">
           <i class="material-icons"
             >exit_to_app
             <p>Sair</p>
