sobre-nos reserva

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -67,7 +67,7 @@
         </div>
         <div class="footer-copyright text-center">
           <a href="">
-            <span class="text-light">Sobre nós</span>
+            <span class="text-light" routerLink='/sobre-nos'>Sobre nós</span>
           </a>
         </div>
       </div>
