--- a/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.css
+++ b/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.css
@@ -8,97 +8,25 @@
   box-sizing: border-box;
 }
 :root {
-  --body-bg-color: white;
-  --card-body-color: rgb(15, 15, 73);
-  --card-accent-color: rgb(255, 255, 20);
-  --card-text-color: white;
-  --social-card-bg-color: rgb(6, 6, 48);
-  --card-top-color: rgb(255, 55, 55);
-  --card-bottom-color: rgb(233, 233, 233);
   --title-font: "Lato", monospace;
   --content-font: "Montserrat", monospace;
 }
-.card-block-one,
+
 .card-block-two {
-  background-color: var(--body-bg-color);
+  background-color: var(--body-bg-color);/*VERIFICAFR COR DE FUNDO*/
   min-height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  
   flex-wrap: wrap;
 }
-.card-block-one .card {
-  width: 30%;
-  max-width: 500px;
-  min-width: 350px;
-  margin: 30px;
-  padding: 10em 0em 0em 0em;
-  background: url(https://docs.google.com/uc?id=1Jdqjf_Qe91K_eu_zdq39KDCiPGsk9zDS);
-  background-size: cover;
-  background-position: center;
-  border-radius: 15px;
-  overflow: hidden;
-  box-shadow: 10px 7px 5px var(--card-accent-color);
-}
 
-.card-one-content,
-.card-two-content {
-  position: relative;
-  z-index: 2;
-  padding: 1.5em;
-  background: linear-gradient(
-    hsl(0 0% 0% / 0),
-    hsl(0 0% 0% / 0.3) 15%,
-    hsl(0 0% 0% / 1)
-  );
-}
-.card-title {
-  width: max-content;
-  position: relative;
-  font-family: sans-serif;
-  color: var(--card-text-color);
-}
-.card-title::after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  height: 5px;
-  width: 100%;
-  background-color: var(--card-accent-color);
-  left: 0px;
-  bottom: -5px;
-}
-
-.card-text {
-  font-family: sans-serif;
-  color: var(--card-text-color);
-  margin-top: 1.3rem;
-  margin-bottom: 0.5em;
-  line-height: 1.6;
-}
-.card-button {
-  outline: none;
-  border: none;
-  padding: 0.6em 0.4em;
-  transform: scale(1.3);
-  margin-top: 1.2em;
-  margin-left: 0.7em;
-  color: #333;
-  background-color: var(--card-accent-color);
-  font-weight: bold;
-  border-radius: 5px;
-  transition: background-color 0.5s, transform 0.5s;
-}
-.card-button:hover,
-.card-button:focus {
-  background-color: var(--body-bg-color);
-  color: #333;
-  transform: scale(1.35);
-}
 .card-block-two .card {
   width: 30%;
-  max-width: 500px;
-  min-width: 350px;
+  max-width: 320px;
+  min-width: 320px;
+  transform: scale(0.75);
+  height: 550px;
   margin: 30px;
   border-radius: 15px;
   overflow: hidden;
@@ -107,10 +35,13 @@
   position: relative;
   box-shadow: 0px 0px 20px rgb(104, 104, 104);
 }
+
 .profile-content {
   width: 100%;
   height: 100%;
 }
+
+/*POSIÇÃO DA FOTOANTES DO HOVER*/
 .profile-top {
   width: 100%;
   display: flex;
@@ -118,22 +49,31 @@
   justify-content: space-around;
   margin: 0.5em;
 }
-.codepen-profile,
+
+/*MUDA O CURSOR + TAMANHO DOS BOTÕES*/
+.linkedin-profile,
 .github-profile {
   width: 35px;
   cursor: pointer;
 }
-.codepen-profile img,
+
+/*TAMANHO DAS IMAGENS*/
+.linkedin-profile img,
 .github-profile img {
   width: 35px;
 }
+
 .profile-image {
   width: 150px;
 }
+
+/*FORMATAÇÃO IMAGEM EM CIRUCLO*/
 .profile-image img {
   width: 150px;
   border-radius: 50%;
 }
+
+/*CONFIG NOME/JOB CENTRO*/
 .profile-title {
   display: flex;
   flex-direction: column;
@@ -141,10 +81,15 @@
   justify-content: center;
   margin: 0.5em;
 }
+
+/*FORMATAÇÃO NOME*/
 .profile-title h1 {
   font-family: var(--title-font);
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.005rem;
+  text-align: center;
 }
+
+/*FORMATAÇÃO RESUME*/
 .profile-bottom p::before {
   content: open-quote;
   font-size: 1em;
@@ -154,12 +99,16 @@
   left: 0px;
   z-index: -1;
 }
+
+/*formatação job*/
 .profile-title h4 {
   font-family: var(--title-font);
   font-weight: 500;
   text-transform: uppercase;
   font-size: 0.9em;
 }
+
+/*BREGUETE VERMELHO */
 .profile-title::after {
   content: "";
   width: 25%;
@@ -168,6 +117,8 @@
   border-radius: 50px;
   background: rgb(199, 0, 0);
 }
+
+/*FORMATAÇÃO RESUME*/
 .profile-bottom {
   display: flex;
   flex-direction: column;
@@ -175,6 +126,8 @@
   justify-content: space-around;
   /* background-color: grey; */
 }
+
+/*FORMATAÇÃO <p>*/
 .profile-bottom p {
   text-align: center;
   font-family: var(--content-font);
@@ -182,6 +135,8 @@
   padding: 0.5em;
   margin-bottom: 1em;
 }
+
+/*FORMATAÇÃO LINK- RESUME*/
 .profile-bottom .full-profile-link {
   text-decoration: none;
   color: black;
@@ -190,50 +145,16 @@
   font-weight: 800;
 }
 
-@media (hover) {
-  .card-block-one .card {
-    box-shadow: 3px 2px 3px var(--card-accent-color);
-    transform: scale(1);
-    transition: transform 1s, box-shadow 1s;
-  }
-  .card-one:hover {
-    transform: scale(1.1);
-    box-shadow: 10px 7px 5px var(--card-accent-color);
-  }
-  .card-two-content {
-    transform: translateY(65%);
-    transition: transform 1s;
-  }
-  .card-two:hover .card-two-content {
-    transform: translateY(0);
-    transition-delay: 500ms;
-  }
-  .card-two-content > * {
-    opacity: 0;
-    transition: opacity 1.5s linear;
-  }
-  .card-two-content .card-title {
-    opacity: 1 !important;
-  }
-  .card-two:hover .card-two-content > * {
-    opacity: 1;
-  }
-  .card-title::after {
-    transform: scaleX(0);
-    transition: transform ease 1s;
-    transform-origin: left;
-  }
-  .card-one:hover .card-title::after,
-  .card-two:hover .card-title::after {
-    transform: scaleX(1);
-  }
-  .codepen-profile,
+/*ESCONDE OS ICONES GIT E CODE PEN*/
+  .linkedin-profile,
   .github-profile {
     opacity: 0;
     transform: scale(0);
     transition: opacity 0.3s linear, transform 0.3s linear;
   }
-  .codepen-profile:hover img {
+
+/*HOVERS GIT E CODEPEN*/
+.linkedin-profile:hover img {
     transform: scale(1.2);
     transition: transform 0.2s linear;
   }
@@ -241,39 +162,56 @@
     transform: scale(1.2);
     transition: transform 0.2s linear;
   }
+
+/*TAMANHO DA IMAGEM 'DEPOIS' DO HOVER*/
   .profile-image {
     transform: scale(1.5) translateY(20%);
     transition: transform 0.3s linear;
   }
+
+/*TAMANHO DO NOME 'DEPOIS' DO HOVER*/
   .profile-title {
     transform: scale(1.2) translateY(100%);
     transition: transform 0.3s linear;
   }
+/*ESCONDE BREGUETE VERMELHO ANTES DO HOVER*/
   .profile-title::after {
     transform: scale(0);
     transition: transform 0.3s linear;
   }
+/*TEXTO DE TRÁS TRANSPARENTE*/
   .profile-bottom {
     opacity: 0;
   }
-  .card-three:hover .codepen-profile,
+
+/*DESAPARECE ICONES DO GIT E CODEPEN*/
+  .card-three:hover .linkedin-profile,
   .card-three:hover .github-profile {
     opacity: 1;
     transform: scale(1);
-    
   }
+
+/*LUGAR DO HOVER GIT E CODE*/
   .card-three:hover .profile-image,
   .card-three:hover .profile-title {
     transform: scale(1) translateY(0);
   }
+
+/*SOME BREGUETE VERMELHO*/
   .card-three:hover .profile-title::after {
     transform: scale(1);
   }
+/*SOME PARTE DEBAIXO*/
   .card-three:hover .profile-bottom {
     opacity: 1;
     transition: opacity 0.3s linear 0.1s;
   }
+
+/*RESUME VERMELHO - HOVER*/
   .full-profile-link:hover {
     color: rgb(199, 0, 0);
   }
+
+.hr{
+  
 }
