--- a/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
+++ b/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
@@ -1,27 +1,164 @@
-<div class="container">
-    <main>
+<body>
 
-<div class="card-block-two">
-    <div class="card card-three">
-      <div class="profile-content">
-        <div class="profile-top">
-          <div class="codepen-profile"><a href="https://codepen.io/nerdyvisky" target="_blank"><img src="https://docs.google.com/uc?id=1K86A4sXvrMFklcOPGMFHyFLAkx5sXf9m" alt=""></a></div>
-          <div class="profile-image"><img src="https://docs.google.com/uc?id=1y3cbQM0ZtsQ2149XkxBo6EOcsIYF35aV" alt="" /></div>
-          <div class="github-profile"><a href="https://github.com/NerdyVisky" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt=""></a></div>
+<div class="container-fluid bgBlue ">
+  <main>
+    
+    <div class="row mx-0 margem  ">
+      <div class="col-md-1 col-md-4">
+        <div class="card-block-two">
+          <div class="card card-three">
+            <div class="profile-content">
+              <div class="profile-top">
+                <div class="linkedin-profile"><a href="https://www.linkedin.com/in/artur-hugo-35ab31114/" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
+                <div class="profile-image"><img src="https://i.imgur.com/and0KrQ.jpg" alt="Foto de perfil - Artur" /></div>
+                <div class="github-profile"><a href="https://github.com/Artur-Hugo" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
+              </div>
+              <div class="profile-title">
+                  <h1>Arthur Hugo</h1>
+                  <h4>Full Stack Java Jr.</h4>
+              </div>
+              <div class="profile-bottom">
+                <p>
+                "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
+                </p>
+                <a href="https://github.com/NerdyVisky/NerdyVisky/blob/main/Vishvesh%20Trivedi%20-%20Resume.pdf" target="_blank" class="full-profile-link">Currículo</a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="profile-title">
-            <h1>Vishvesh Trivedi</h1>
-            <h4>Web Developer</h4>
-        </div>
-        <div class="profile-bottom">
-          <p>
-          "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
-          </p>
-          <a href="https://github.com/NerdyVisky/NerdyVisky/blob/main/Vishvesh%20Trivedi%20-%20Resume.pdf" target="_blank" class="full-profile-link">View Resume</a>
+      </div>
+  </div>
+
+  <div class="col-md-1 col-md-4">
+    <div class="card-block-two">
+      <div class="card card-three">
+        <div class="profile-content">
+          <div class="profile-top">
+            <div class="linkedin-profile"><a href="https://codepen.io/nerdyvisky" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
+            <div class="profile-image"><img src="https://i.imgur.com/HoOA3AK.jpg" alt="Foto de perfil-Cybelle" /></div>
+            <div class="github-profile"><a href="https://github.com/NerdyVisky" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
+          </div>
+          <div class="profile-title">
+              <h1>Cybelle Hirota</h1>
+              <h4>Full Stack Java Jr.</h4>
+          </div>
+          <div class="profile-bottom">
+            <p>
+            "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
+            </p>
+            <a href="https://github.com/NerdyVisky/NerdyVisky/blob/main/Vishvesh%20Trivedi%20-%20Resume.pdf" target="_blank" class="full-profile-link">Currículo</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
+
+
+  <div class="col-md-1 col-md-4">
+    <div class="card-block-two">
+      <div class="card card-three">
+        <div class="profile-content">
+          <div class="profile-top">
+            <div class="linkedin-profile"><a href="https://codepen.io/nerdyvisky" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
+            <div class="profile-image"><img src="https://i.imgur.com/874bbs8.jpg" alt="Foto de perfil - Trummer" /></div>
+            <div class="github-profile"><a href="https://github.com/NerdyVisky" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
+          </div>
+          <div class="profile-title">
+              <h1>Marcus Trummer</h1>
+              <h4>Full Stack Java Jr.</h4>
+          </div>
+          <div class="profile-bottom">
+            <p>
+            "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
+            </p>
+            <a href="https://github.com/NerdyVisky/NerdyVisky/blob/main/Vishvesh%20Trivedi%20-%20Resume.pdf" target="_blank" class="full-profile-link">Currículo</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+<div class="row mx-0 margem">
+  <div class="col-md-1 col-md-4">
+    <div class="card-block-two">
+      <div class="card card-three">
+        <div class="profile-content">
+          <div class="profile-top">
+            <div class="linkedin-profile"><a href="https://www.linkedin.com/in/marilia-gabriely-do-silva-76631240" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
+            <div class="profile-image"><img src="https://i.imgur.com/oze948G.jpg" alt="Foto de perfil - Marília" /></div>
+            <div class="github-profile"><a href="https://github.com/MariliaDev" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
+          </div>
+          <div class="profile-title">
+              <h1>Marília Gabriely</h1>
+              <h4>Full Stack Java Jr.</h4>
+          </div>
+          <div class="profile-bottom">
+            <p>
+            "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
+            </p>
+            <a href="https://github.com/NerdyVisky/NerdyVisky/blob/main/Vishvesh%20Trivedi%20-%20Resume.pdf" target="_blank" class="full-profile-link">Currículo</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="col-md-1 col-md-4">
+  <div class="card-block-two">
+    <div class="card card-three">
+      <div class="profile-content">
+        <div class="profile-top">
+          <div class="linkedin-profile"><a href="https://codepen.io/nerdyvisky" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
+          <div class="profile-image"><img src="https://i.imgur.com/TOjLNg0.jpg" alt="Foto de perfil - Raquel" /></div>
+          <div class="github-profile"><a href="https://github.com/NerdyVisky" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
+        </div>
+        <div class="profile-title">
+            <h1>Raquel Modesto</h1>
+            <h4>Full Stack Java Jr.</h4>
+        </div>
+        <div class="profile-bottom">
+          <p>
+          "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
+          </p>
+          <a href="https://github.com/NerdyVisky/NerdyVisky/blob/main/Vishvesh%20Trivedi%20-%20Resume.pdf" target="_blank" class="full-profile-link">Currículo</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="col-md-1 col-md-4">
+  <div class="card-block-two">
+    <div class="card card-three">
+      <div class="profile-content">
+        <div class="profile-top">
+          <div class="linkedin-profile"><a href="https://www.linkedin.com/in/talissasilva/" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
+          <div class="profile-image"><img src="https://i.imgur.com/Ej5QeY3.jpg" alt="Foto de perfil - Talissa" /></div>
+          <div class="github-profile"><a href="https://github.com/talisilva" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
+        </div>
+        <div class="profile-title">
+            <h1>Talissa Agatha</h1>
+            <h4>Full Stack Java Jr.</h4>
+        </div>
+        <div class="profile-bottom">
+          <p>
+          "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
+          </p>
+          <a href="https://drive.google.com/file/d/12bJTS6DYvf1_0fsRrXxKs-M7rSpjWGUK/view?usp=sharing" target="_blank" class="full-profile-link">Currículo</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  
+
 </main>
 </div>
+</body>
