--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -1,166 +1,147 @@
-
 @import url("http://fonts.cdnfonts.com/css/bubbleboddy-neue-trial");
-*{
-
-    font-family: 'Bubbleboddy Neue Trial';
-}
-#img-bg{
-
-   
-    background-image: url('https://media.discordapp.net/attachments/890758555806859317/897994805404114994/Design_sem_nome_18.png?width=390&height=390');
-    
-    min-height: 100vh;
-
-    
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: unset;
-    background-position-x: left;
-   
+* {
+  font-family: "Bubbleboddy Neue Trial";
 }
 
-body{
-    background-image: url('https://imgur.com/UDDLe3f.gif');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+#img-bg {
+  background-image: url("https://media.discordapp.net/attachments/890758555806859317/897994805404114994/Design_sem_nome_18.png?width=390&height=390");
 
-   
+  min-height: 100vh;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: unset;
+  background-position-x: left;
+}
+h1 {
+  margin-top: 50px;
+}
+body {
+  background-image: url("/assets/Design\ sem\ nome.gif");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-#border{
-
-  
-    width: 100%;
-    min-height: 50vh;
-    border-radius: 80px;
-    display:list-item;
-    align-items:unset;
-    padding: 5px;
-    
-    
+#border {
+  width: 100%;
+  min-height: 50vh;
+  border-radius: 50px;
+  display: list-item;
+  align-items: unset;
+  padding: 15px;
 }
 
-.linha{
+.form-control {
+  font-family: "Josefin Sans", sans-serif;
+  border: px solid;
+}
 
-    display: flex;
+.linha {
+  display: flex;
   flex-direction: column;
   padding: 5px;
   margin-bottom: 30px;
   background: transparent;
   border: none;
-  font-family: 'Bubbleboddy Neue Trial';
-  border-bottom: 1px solid #160150; 
+  border-bottom: 1px solid #160150;
   padding: 0;
   margin: 0;
   outline: none;
+  font-family: Roboto, Arial, sans-serif;
   font-size: 16px;
   color: rgb(83, 80, 80);
-  width: 250px;
-  
-  }
+  width: 480px;
+}
 
-  textarea:focus, input:focus, select:focus {
-    box-shadow: 0 0 0 0;
-   border-bottom: 1px solid #160150;
-   font-family: 'Bubbleboddy Neue Trial';
-    outline: 0;
+textarea:focus,
+input:focus,
+select:focus {
+  box-shadow: 0 0 0 0;
+  border-bottom: 1px solid #160150;
+  outline: 0;
+}
+
+a {
+  color: #160150;
+}
+
+h1 {
+  font-weight: normal;
+  font-size: 4em;
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 500px;
+  color: #160150;
+  text-align: center;
+  font-family: "Bubbleboddy Neue Trial";
+}
+
+label,
+input,
+textarea,
+a {
+  display: block;
+  border-radius: 5px;
 }
 
 
-h1{
-	font-weight: normal;
-	font-size: 4em;
-	margin: 0 auto;
-	margin-top: 30px;
-	width: 500px;
-	color: #160150;
-	text-align: center;
-    font-family: 'Bubbleboddy Neue Trial';
 
-
+a {
+  width: 500px;
+  font-family: "Bubbleboddy Neue Trial";
+  border-radius: 20px;
+  outline: none;
+  padding: 10px;
+  font-size: 1em;
+  color: #676767;
+  transition: border 0.5s;
+  -webkit-transition: border 0.5s;
+  -moz-transition: border 0.5s;
+  -o-transition: border 0.5s;
+  border: solid 3px whitesmoke;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
-
-
-@keyframes myfirst
-{
-	0% {margin-left: -235px}
-	70% {margin-left: 100%;}
-	100% {margin-left: 100%;}
-} */
-
-form{
-	margin: 0 auto;
-	width: 500px;
-	padding-top: 40px;
-	color: #160150;
-    font-family: 'Bubbleboddy Neue Trial';
-	position: relative;
-	
-	
+textarea {
+  height: 100px;
+  resize: none;
+  overflow: auto;
 }
-label, input, textarea, a{
-	display: block;	
-    
+input[type="submit"],
+a {
+  background-color: whitesmoke;
+  color: #160150;
+  height: 50px;
+  cursor: pointer;
+  margin-top: 30px;
+  font-size: 1.29em;
+  font-family: "Bubbleboddy Neue Trial";
+  -webkit-transition: background-color 0.5s;
+  -moz-transition: background-color 0.5s;
+  -o-transition: background-color 0.5s;
+  transition: background-color 0.5s;
 }
-input, textarea, a{
-	width: 500px;	
-	border: none;
-    font-family: 'Bubbleboddy Neue Trial';
-	border-radius: 20px;
-	outline: none;
-	padding: 10px;
-	font-size: 1em;
-	color: #676767;
-	transition: border 0.5s;
-	-webkit-transition: border 0.5s;
-	-moz-transition: border 0.5s;
-	-o-transition: border 0.5s;
-	border: solid 3px whitesmoke;	
-	-webkit-box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	box-sizing:border-box;
-	
+input[type="submit"]:hover {
+  background-color: #e58f0e;
 }
-
-
-textarea{
-	height: 100px;	
-	resize: none; 
-	overflow: auto;
+label {
+  font-size: 1.5em;
+  margin-top: 20px;
+  padding-left: 20px;
 }
-input[type="submit"], a{
-	background-color:whitesmoke;
-	color:#160150;
-	height: 50px;
-	cursor: pointer;
-	margin-top: 30px;
-	font-size: 1.29em;
-    font-family: 'Bubbleboddy Neue Trial';
-	-webkit-transition: background-color 0.5s;
-	-moz-transition: background-color 0.5s;
-	-o-transition: background-color 0.5s;
-	transition: background-color 0.5s;
+.formgroup,
+.formgroup-active,
+.formgroup-error {
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: 10.5%;
+  font-family: "Bubbleboddy Neue Trial";
+  transition: background-image 0.7s;
+  -webkit-transition: background-image 0.7s;
+  -moz-transition: background-image 0.7s;
+  -o-transition: background-image 0.7s;
+  width: 566px;
+  padding-top: 2px;
 }
-input[type="submit"]:hover{
-	background-color: #e58f0e;
-	
-}
-label{
-	font-size: 1.5em;
-	margin-top: 20px;
-	padding-left: 20px;
-}
-.formgroup, .formgroup-active, .formgroup-error{
-	background-repeat: no-repeat;
-	background-position: right bottom;
-	background-size: 10.5%;
-    font-family: 'Bubbleboddy Neue Trial';
-	transition: background-image 0.7s;
-	-webkit-transition: background-image 0.7s;
-	-moz-transition: background-image 0.7s;
-	-o-transition: background-image 0.7s;
-	width: 566px;
-	padding-top: 2px;
-}
-
