Criando Alterar Usuario

--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -8,7 +8,7 @@
 
 			<div class="col-md-6 bg-white" id="border">
 
-				<form id="waterform" method="post">
+				<form method="post">
 
 
 					<h1>Fale conosco</h1>
