--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -81,9 +81,15 @@
       <div class="row"></div>
       <div class="row margintopimg justify-content-center">
         <div class="testimonials-col">
-          <img class="imgsub" src="{{ foto }}" />
+         
+          <img class="imgsub" src="{{ foto }}" > <li class="nav-item edit">
+           
+        
+            </li>
+         
           <div class="font-20 nomefeed mt-4">
             <h3>{{ nome }}</h3>
+            <a [routerLink]="['/user-edit', id]">    <p ><small class="text-white">Editar</small> <i class="fa fa-pencil-square-o justify-content-center" aria-hidden=true></i></p></a>
           </div>
         </div>
       </div>
@@ -123,6 +129,7 @@
             <div class="row">
               <div class="testimonials-col">
                 <img src="{{ item.usuario.foto }}" />
+               
                 <div class="font-20 nomefeed mt-4">
                   <h3>{{ item.usuario.nome }}</h3>
                 </div>
