Tentando implementar minhas postagens 16/10

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -70,7 +70,7 @@
 
       <li class="form-inline ml-5 text-muted text-center">
         <a
-          [routerLink]="['/minhas-postagens', id]"
+          [routerLink]="['/minhas-postagens']"
           class="text-muted"
           (click)="findByIdUser()"
         >
