--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -66,8 +66,8 @@
           <span class="text-light">furando a bolha ©</span>
         </div>
         <div class="footer-copyright text-center">
-          <a href="">
-            <span class="text-light" routerLink='/sobre-nos'>Sobre nós</span>
+          <a [routerLink]="['/a-revanche']" href="">
+            <span class="text-light">Sobre nós</span>
           </a>
         </div>
       </div>
