--- a/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
+++ b/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
@@ -1,8 +1,12 @@
+<app-menu></app-menu>
 <body>
 
 <div class="container-fluid bgBlue ">
+
+ 
   <main>
     
+    <h1 class=" bgRed">Our Team</h1>
     <div class="row mx-0 margem  ">
       <div class="col-md-1 col-md-4">
         <div class="card-block-two">
@@ -14,14 +18,11 @@
                 <div class="github-profile"><a href="https://github.com/Artur-Hugo" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
               </div>
               <div class="profile-title">
-                  <h1>Arthur Hugo</h1>
+                  <h2>Arthur Hugo</h2>
                   <h4>Full Stack Java Jr.</h4>
               </div>
               <div class="profile-bottom">
-                <p>
-                "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
-                </p>
-                <a href="https://github.com/NerdyVisky/NerdyVisky/blob/main/Vishvesh%20Trivedi%20-%20Resume.pdf" target="_blank" class="full-profile-link">Currículo</a>
+                <a href="mailto:artur.hugoliga@uni9.edu.br" target="_blank" class="full-profile-link">E-mail</a>
               </div>
             </div>
           </div>
@@ -34,19 +35,16 @@
       <div class="card card-three">
         <div class="profile-content">
           <div class="profile-top">
-            <div class="linkedin-profile"><a href="https://codepen.io/nerdyvisky" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
+            <div class="linkedin-profile"><a href="https://www.linkedin.com/" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
             <div class="profile-image"><img src="https://i.imgur.com/HoOA3AK.jpg" alt="Foto de perfil-Cybelle" /></div>
-            <div class="github-profile"><a href="https://github.com/NerdyVisky" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
+            <div class="github-profile"><a href="https://github.com/Hirotz" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
           </div>
           <div class="profile-title">
-              <h1>Cybelle Hirota</h1>
+              <h2>Cybelle Hirota</h2>
               <h4>Full Stack Java Jr.</h4>
           </div>
           <div class="profile-bottom">
-            <p>
-            "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
-            </p>
-            <a href="https://github.com/NerdyVisky/NerdyVisky/blob/main/Vishvesh%20Trivedi%20-%20Resume.pdf" target="_blank" class="full-profile-link">Currículo</a>
+            <a href="mailto:cybellehirota@gmail.com" target="_blank" class="full-profile-link">E-mail</a>
           </div>
         </div>
       </div>
@@ -60,19 +58,16 @@
       <div class="card card-three">
         <div class="profile-content">
           <div class="profile-top">
-            <div class="linkedin-profile"><a href="https://codepen.io/nerdyvisky" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
+            <div class="linkedin-profile"><a href="https://www.linkedin.com/in/marcus-trummer-880196145/" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
             <div class="profile-image"><img src="https://i.imgur.com/874bbs8.jpg" alt="Foto de perfil - Trummer" /></div>
-            <div class="github-profile"><a href="https://github.com/NerdyVisky" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
+            <div class="github-profile"><a href="https://github.com/marcustrummer" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
           </div>
           <div class="profile-title">
-              <h1>Marcus Trummer</h1>
+              <h2>Marcus Trummer</h2>
               <h4>Full Stack Java Jr.</h4>
           </div>
           <div class="profile-bottom">
-            <p>
-            "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
-            </p>
-            <a href="https://github.com/NerdyVisky/NerdyVisky/blob/main/Vishvesh%20Trivedi%20-%20Resume.pdf" target="_blank" class="full-profile-link">Currículo</a>
+            <a href="mailto:marcusstrummer1@hotmail.com" target="_blank" class="full-profile-link">E-mail</a>
           </div>
         </div>
       </div>
@@ -91,14 +86,11 @@
             <div class="github-profile"><a href="https://github.com/MariliaDev" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
           </div>
           <div class="profile-title">
-              <h1>Marília Gabriely</h1>
+              <h2>Marília Gabriely</h2>
               <h4>Full Stack Java Jr.</h4>
           </div>
           <div class="profile-bottom">
-            <p>
-            "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
-            </p>
-            <a href="https://github.com/NerdyVisky/NerdyVisky/blob/main/Vishvesh%20Trivedi%20-%20Resume.pdf" target="_blank" class="full-profile-link">Currículo</a>
+            <a href="mailto:mariliadevs@gmail.com" target="_blank" class="full-profile-link">E-mail</a>
           </div>
         </div>
       </div>
@@ -112,19 +104,16 @@
     <div class="card card-three">
       <div class="profile-content">
         <div class="profile-top">
-          <div class="linkedin-profile"><a href="https://codepen.io/nerdyvisky" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
+          <div class="linkedin-profile"><a href="https://www.linkedin.com/in/raquel-viana-modesto?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2FiGl%2FYx%2BTOexiVS3glvJGg%3D%3D" target="_blank"><img src="https://i.imgur.com/FyHaYCw.png" alt="Logo - LinkedIn"></a></div>
           <div class="profile-image"><img src="https://i.imgur.com/TOjLNg0.jpg" alt="Foto de perfil - Raquel" /></div>
-          <div class="github-profile"><a href="https://github.com/NerdyVisky" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
+          <div class="github-profile"><a href="https://github.com/rvmodesto" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
         </div>
         <div class="profile-title">
-            <h1>Raquel Modesto</h1>
+            <h2>Raquel Modesto</h2>
             <h4>Full Stack Java Jr.</h4>
         </div>
         <div class="profile-bottom">
-          <p>
-          "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
-          </p>
-          <a href="https://github.com/NerdyVisky/NerdyVisky/blob/main/Vishvesh%20Trivedi%20-%20Resume.pdf" target="_blank" class="full-profile-link">Currículo</a>
+          <a href="mailto:raquel.modesto2@gmail.com" target="_blank" class="full-profile-link">E-mail</a>
         </div>
       </div>
     </div>
@@ -143,14 +132,11 @@
           <div class="github-profile"><a href="https://github.com/talisilva" target="_blank"><img src="https://docs.google.com/uc?id=1UjB09FirJV6p0dkCMFQEjGxIV8JUisYu" alt="Logo - GitHub"></a></div>
         </div>
         <div class="profile-title">
-            <h1>Talissa Agatha</h1>
+            <h2>Talissa Agatha</h2>
             <h4>Full Stack Java Jr.</h4>
         </div>
         <div class="profile-bottom">
-          <p>
-          "As a matter of fact, you miss 100% of the shots you don't take. <br>So don't think much, just go for it!"
-          </p>
-          <a href="https://drive.google.com/file/d/12bJTS6DYvf1_0fsRrXxKs-M7rSpjWGUK/view?usp=sharing" target="_blank" class="full-profile-link">Currículo</a>
+          <a href="mailto:talissaagtha@gmail.com" target="_blank" class="full-profile-link">E-mail</a>
         </div>
       </div>
     </div>
