--- a/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.css
+++ b/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.css
@@ -17,37 +17,38 @@
   min-height: 100vh;
   display: flex;
   align-items: center;
-  
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
 .card-block-two .card {
   width: 30%;
-  max-width: 320px;
-  min-width: 320px;
+  max-width: 330px;
+  min-width: 330px;
   transform: scale(0.75);
-  height: 550px;
+  height: 390px;
   margin: 30px;
   border-radius: 15px;
   overflow: hidden;
   padding: 2em;
   background-color: #fff;
   position: relative;
-  box-shadow: 0px 0px 20px rgb(104, 104, 104);
+  box-shadow: 5px 5px 10p rgb(22, 124, 172);
 }
 
 .profile-content {
   width: 100%;
-  height: 100%;
+  height: 150%;
 }
 
-/*POSIÇÃO DA FOTOANTES DO HOVER*/
+/*POSIÇÃO DA FOTO ANTES DO HOVER*/
 .profile-top {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 0.5em;
+  margin: 0.05em;
+  margin-top: -10px;
 }
 
 /*MUDA O CURSOR + TAMANHO DOS BOTÕES*/
@@ -64,12 +65,12 @@
 }
 
 .profile-image {
-  width: 150px;
+  width: -150px;
 }
 
 /*FORMATAÇÃO IMAGEM EM CIRUCLO*/
 .profile-image img {
-  width: 150px;
+  width: 175px;
   border-radius: 50%;
 }
 
@@ -78,15 +79,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content:center;
   margin: 0.5em;
 }
 
 /*FORMATAÇÃO NOME*/
-.profile-title h1 {
+.profile-title h2 {
   font-family: var(--title-font);
-  margin-bottom: 0.005rem;
-  text-align: center;
+  text-align: center ;
+  padding-top: 10px;
 }
 
 /*FORMATAÇÃO RESUME*/
@@ -127,15 +128,6 @@
   /* background-color: grey; */
 }
 
-/*FORMATAÇÃO <p>*/
-.profile-bottom p {
-  text-align: center;
-  font-family: var(--content-font);
-  font-weight: 600;
-  padding: 0.5em;
-  margin-bottom: 1em;
-}
-
 /*FORMATAÇÃO LINK- RESUME*/
 .profile-bottom .full-profile-link {
   text-decoration: none;
@@ -155,8 +147,8 @@
 
 /*HOVERS GIT E CODEPEN*/
 .linkedin-profile:hover img {
-    transform: scale(1.2);
-    transition: transform 0.2s linear;
+    transform: scale(1.0) ;
+    transition: transform 0.2s linear ;
   }
   .github-profile:hover img {
     transform: scale(1.2);
@@ -171,17 +163,22 @@
 
 /*TAMANHO DO NOME 'DEPOIS' DO HOVER*/
   .profile-title {
-    transform: scale(1.2) translateY(100%);
+    transform: scale(1.2) translateY(90%);
     transition: transform 0.3s linear;
+    padding-top: 3px;
+    text-justify: distribute;
   }
 /*ESCONDE BREGUETE VERMELHO ANTES DO HOVER*/
   .profile-title::after {
-    transform: scale(0);
+    transform: scale(0.5) translateY(30px);
+    
     transition: transform 0.3s linear;
+    
   }
 /*TEXTO DE TRÁS TRANSPARENTE*/
   .profile-bottom {
     opacity: 0;
+    
   }
 
 /*DESAPARECE ICONES DO GIT E CODEPEN*/
@@ -189,17 +186,21 @@
   .card-three:hover .github-profile {
     opacity: 1;
     transform: scale(1);
+    
   }
 
 /*LUGAR DO HOVER GIT E CODE*/
   .card-three:hover .profile-image,
   .card-three:hover .profile-title {
     transform: scale(1) translateY(0);
+    align-items: center;
+    text-size-adjust: +10%;
+    
   }
 
 /*SOME BREGUETE VERMELHO*/
   .card-three:hover .profile-title::after {
-    transform: scale(1);
+    transform: scale(1.5);
   }
 /*SOME PARTE DEBAIXO*/
   .card-three:hover .profile-bottom {
@@ -209,9 +210,14 @@
 
 /*RESUME VERMELHO - HOVER*/
   .full-profile-link:hover {
-    color: rgb(199, 0, 0);
+    color: rgb(199, 0, 0) !important;
   }
 
+  .card-block-two:hover .card {
+    transform: scale(0.8);
+    transition: ease-in-out;
+    
+  }
 .hr{
-  
+  height: 10px;
 }
