--- a/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
+++ b/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
@@ -6,7 +6,8 @@
  
   <main>
     
-    <h1 class=" bgRed">Our Team</h1>
+    <h1 class="text-white">Nosso Time</h1>
+
     <div class="row mx-0 margem  ">
       <div class="col-md-1 col-md-4">
         <div class="card-block-two">
