--- a/src/app/edit/usuario-edit/usuario-edit.component.html
+++ b/src/app/edit/usuario-edit/usuario-edit.component.html
@@ -12,7 +12,7 @@
                
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-10">
-                        <h1 class="text-center">atualizar Usuario</h1>
+                        <h1 class="text-center">Atualizar Usuário</h1>
     
                         <div class="form-group">
                             <label for="nome">Nome</label>
