--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,6 +1,6 @@
 @import url(http://fonts.cdnfonts.com/css/bubbleboddy-neue-trial);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic);
-
+@import url(https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap);
 
 
 a{
@@ -54,7 +54,7 @@ li {
 }
 
 .mudaFonte{
-    font-family: Roboto, Arial, sans-serif;
+    font-family: 'Bubblegum Sans', cursive;
 }
 
 .linha {
