--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -14,7 +14,7 @@
           </li>
           <li>
             <a
-              href="https://www.linkedin.com/feed/"
+              href="https://www.linkedin.com/in/furando-a-bolha-5b2442222/"
               target="_blank"
               class="icoLinkedin"
             >
@@ -23,7 +23,7 @@
           </li>
           <li>
             <a
-              href="https://www.instagram.com/generationbrasil/"
+              href="https://www.instagram.com/furandoabolha21/"
               target="_blank"
               class="icoInstagram"
             >
