--- a/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
+++ b/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
@@ -8,8 +8,13 @@
     
     <h1 class="text-white">Nosso Time</h1>
 
+<div class="row col-md-12 d-flex justify-content-center ajeita">
+
+/////<div class="row col-md-12">
+
+
     <div class="row mx-0 margem  ">
-      <div class="col-md-1 col-md-4">
+      <div class="">
         <div class="card-block-two">
           <div class="card card-three">
             <div class="profile-content">
@@ -31,7 +36,12 @@
       </div>
   </div>
 
-  <div class="col-md-1 col-md-4">
+
+ 
+
+
+
+  <div class="">
     <div class="card-block-two">
       <div class="card card-three">
         <div class="profile-content">
@@ -52,9 +62,12 @@
     </div>
   </div>
 
+ 
 
 
-  <div class="col-md-1 col-md-4">
+ 
+
+  <div>
     <div class="card-block-two">
       <div class="card card-three">
         <div class="profile-content">
@@ -76,8 +89,16 @@
   </div>
 
 
-<div class="row mx-0 margem">
-  <div class="col-md-1 col-md-4">
+
+
+  /////</div>
+
+
+  /////<div class="row col-md-12">
+
+
+<div class="">
+  <div class="">
     <div class="card-block-two">
       <div class="card card-three">
         <div class="profile-content">
@@ -100,7 +121,10 @@
 </div>
 
 
-<div class="col-md-1 col-md-4">
+
+
+
+<div class="">
   <div class="card-block-two">
     <div class="card card-three">
       <div class="profile-content">
@@ -123,7 +147,7 @@
 
 
 
-<div class="col-md-1 col-md-4">
+<div class="">
   <div class="card-block-two">
     <div class="card card-three">
       <div class="profile-content">
@@ -144,7 +168,10 @@
   </div>
 </div>
 
-  
+</div>
+
+
+///////////////</div>
 
 </main>
 </div>
