--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -122,7 +122,17 @@
         role="tablist"
       ></div>
     </nav>
+   
+  </div>
     <div class="card-rows justify-content-center">
+      <div class="row d-flex justify-content-center mt-5 mb-5">
+        <div class="col-md-4">
+            <div class="form-group">
+                <input type="text" class="form-control" id="titulo" placeholder="Digite um
+                titulo de postagem para pesquisar" [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'>
+            </div>
+  
+        </div>
       <div *ngFor="let item of listaPostagens">
         <div class="card-body bgBlue text-white">
           <section class="testimonials">
