--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,7 +1,7 @@
 @import url("http://fonts.cdnfonts.com/css/bubbleboddy-neue-trial");
 *{
 
-    font-family: 'Bubbleboddy Neue Trial';
+    font-family: 'arial';
 }
 body{
 
@@ -40,7 +40,7 @@ body{
   margin: 0;
   outline: none;
   color: #8e8e94;
-  font-family: "Bubbleboddy Neue Trial", sans-serif;
+  /*font-family: "Bubbleboddy Neue Trial", sans-serif;*/
   font-weight: 200;
 
   width: 450px;
@@ -61,7 +61,7 @@ background: transparent;
   width: 450px;
   font-size: 16px;
   color: #8e8e94;
-  font-family: "Bubbleboddy Neue Trial", sans-serif;
+  /*font-family: "Bubbleboddy Neue Trial", sans-serif; */
   font-weight: 200;
 
   
