Ajustando título: Sobre Nós

--- a/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
+++ b/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.html
@@ -13,10 +13,11 @@
       </div>
     </div>
 
-    <main>
+    <main >
 
+      <div class="mt-5 d-flex justify-content-center">
       <h1 class="text-white">Nosso Time</h1>
-
+    </div>
       <div class="row col-md-12 d-flex justify-content-center ajeita">
 
         <div class="row col-md-12">
