--- a/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.css
+++ b/src/app/sobre-nos-a-revanche/sobre-nos-a-revanche.component.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 :root {
   --title-font: "Lato", monospace;
@@ -223,5 +224,9 @@
 }
 
 .ajeita{
-  margin-left: 6.19%;
+  margin-left:11%;
+}
+
+main{
+  overflow-x: hidden;
 }
