--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.cdnfonts.com/css/bubbleboddy-neue-trial");
+@import url("https://fonts.cdnfonts.com/css/bubbleboddy-neue-trial");
 *{
 
     font-family: 'arial';
