--- a/src/app/minhas-postagens/minhas-postagens.component.css
+++ b/src/app/minhas-postagens/minhas-postagens.component.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.cdnfonts.com/css/bubbleboddy-neue-trial);
+@import url(https://fonts.cdnfonts.com/css/bubbleboddy-neue-trial);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic);
 
 
