Fazendo alguns pequenos ajustes

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -62,7 +62,7 @@
 
     <ul class="navbar-nav ml-auto d-flex align-items-center mt-3">
       <li class="nav-item pl-3">
-        <a [routerLink]="['/entrar']" class="m-0 font-weight-bold fs-16 text-muted">
+        <a (click)="sair()" class="m-0 font-weight-bold fs-16 text-muted">
           <i class="material-icons">exit_to_app
             <p>Sair</p>
           </i>
