--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -5,7 +5,7 @@
     class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo"
   >
     <div class="justify-content-center text-center">
-      <div>
+      <div >
         <h3>O MAIS FURADOS</h3>
       </div>
       <div class="marginsub70">
@@ -130,15 +130,20 @@
       ></div>
     </nav>
     <div class="card-rows justify-content-center">
-      <div *ngFor="let item of listaPostagens">
+      <div *ngFor="let item of listaPostagens | orderBy : key : reverse">
         <div class="card-body bgBlue text-white">
           <section class="testimonials">
             <div class="row">
               <div class="testimonials-col">
                 <img src="{{ item.usuario.foto }}" />
 
-                <div class="font-20 nomefeed mt-4">
-                  <h3>{{ item.usuario.nome }}</h3>
+                <div  class="nomefeed mt-4">
+                  <h3 class="font-20">{{ item.usuario.nome }}</h3>
+                  <p class="card-text">
+                    <small class="text-muted"
+                      >{{ item.data | date: "dd/MM/yyyy" }} às
+                      {{ item.data | date: "HH:mm" }}</small
+                    >
                 </div>
               </div>
             </div>
