--- a/src/styles.css
+++ b/src/styles.css
@@ -1,45 +1,43 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("http://fonts.cdnfonts.com/css/bubbleboddy-neue-trial");
-*{
-    font-family:'Bubbleboddy Neue Trial';
-    
-
+@import url("https://use.typekit.net/bzx4gkm.css");
+* {
+  font-family: myriad-pro, sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
-.bgBlue{
-    background-color: rgb(9,18,58);
-}
-.testimonials{
-     
-    margin: auto;
-    padding-top: 10px;
-  
+.bgBlue {
+  background-color: rgb(9, 18, 58);
 }
 
-.testimonials-col{
-    flex-basis: 44%;
-    border-radius: 10px;
-    margin-bottom: -1%;
-    text-align: left;
-    padding: 5px;
-    display: flex;
+.nomefeed {
+  margin-left: -7%;
 }
 
-
-.nomefeed{
-    margin-left: -7%;
+.testimonials {
+  margin: auto;
+  padding-top: 10px;
+}
+.testimonials-col {
+  flex-basis: 44%;
+  border-radius: 10px;
+  margin-bottom: -1%;
+  text-align: left;
+  padding: 5px;
+  display: flex;
+}
+.testimonials-col img {
+  width: 90px;
+  height: 90px;
+  margin-left: 5px;
+  margin-right: 30px;
+  border-radius: 50%;
 }
 
-.testimonials-col img{
-    height: 90px;
-    margin-left: 5px;
-    margin-right: 30px;
-    border-radius: 50%;
-
+.font-20 {
+  font-size: 20pt;
 }
 
-.font-20{
-    font-size: 20pt;
+.fs-10{
+    font-size: 8pt;
 }
-
-
