--- a/src/app/minhas-postagens/minhas-postagens.component.html
+++ b/src/app/minhas-postagens/minhas-postagens.component.html
@@ -130,6 +130,9 @@
                 <button (click)="getPostagemById(item.id)" (click)='descurtida(item.id)' class="mudaFonte bgBlue btn">
                   <img src="https://i.imgur.com/sqUvqU7.png" alt="" width="100px" height="50px" class="bgBlue">
                 </button>
+                <button type="button" class="btn btn-outline-info marginbutton"  data-toggle="modal"
+                data-target="#editPostagem">Editar</button>
+                <button type="button" class="btn btn-outline-danger">Deletar</button>
               </div>
   
               <!--LEMBRAR DE APAGAR OS PEIXES E GATOS DO ASSETS DE ARTUR-->
@@ -147,7 +150,7 @@
       </div>
       <!--Fim do Feed-->
   
-      <!-- Modal -->
+      <!-- Modal novo Post -->
       <div
         class="modal fade"
         id="novaPostagem"
@@ -228,6 +231,120 @@
           </div>
         </div>
       </div>
+
+
+
+           <!-- Modal Editar Postagem -->
+      <div
+      class="modal fade"
+      id="editPostagem"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="TituloModalCentralizado"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="TituloModalCentralizado">
+              Editar Postagem
+            </h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Fechar"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="titulo">Título</label>
+              <input
+                type="text"
+                class="linha"
+                id="titulo"
+                placeholder="Digite o título"
+                [(ngModel)]="postagem.titulo"
+              />
+            </div>
+
+            <div class="form-group">
+              <label for="texto">Texto</label>
+              <textarea
+                class="linha"
+                name="texto"
+                id="texto"
+                rows="3"
+                [(ngModel)]="postagem.texto"
+              ></textarea>
+            </div>
+
+            <div class="form-group">
+              <label for="texto"
+                >Escolha um tema ou
+                <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>:
+              </label>
+              <select
+                name="tema"
+                id="tema"
+                class="linha"
+                (change)="findByIdTema()"
+                [(ngModel)]="idTema"
+              >
+                <option *ngFor="let tema of listaTemas" value="{{ tema.id }}">
+                  {{ tema.descricao }}
+                </option>
+              </select>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">
+              Cancelar
+            </button>
+            <button
+              type="button"
+              class="btn btn-outline-light bgBlue text-white"
+              (click)=""
+              data-dismiss="modal"
+            >
+              Publicar
+            </button>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
   </div>
   
