--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -5,7 +5,7 @@
     class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo"
   >
     <div class="justify-content-center text-center">
-      <div >
+      <div>
         <h3>O MAIS FURADOS</h3>
       </div>
       <div class="marginsub70">
@@ -86,16 +86,10 @@
           <img class="imgsub" src="{{ foto }}" />
           <li class="nav-item edit"></li>
 
-          <div class="font-20 nomefeed mt-4">
+          <div class="font-20 nomefeed mt-4 d-flex justify-content-center">
             <h3>{{ nome }}</h3>
             <a [routerLink]="['/user-edit', id]">
-              <p>
-                <small class="text-white">Editar</small>
-                <i
-                  class="fa fa-pencil-square-o justify-content-center"
-                  aria-hidden="true"
-                ></i>
-              </p>
+              <i class="fs-Edit fa fa-pencil p-0 " aria-hidden="true"></i>
             </a>
           </div>
         </div>
@@ -105,12 +99,16 @@
           <div class="sub-main">
             <div class="row justify-content-center">
               <button
-                class="btn btn-outline-light"
+                class="btn btn-outline-light mr-3"
                 data-toggle="modal"
                 data-target="#novaPostagem"
               >
                 Post
               </button>
+
+              <a [routerLink]="['/user-edit', id]">
+                <button class="btn btn-outline-light">Editar Perfil</button>
+              </a>
             </div>
           </div>
         </div>
@@ -130,20 +128,21 @@
       ></div>
     </nav>
     <div class="card-rows justify-content-center">
-      <div *ngFor="let item of listaPostagens | orderBy : key : reverse">
+      <div *ngFor="let item of listaPostagens | orderBy: key:reverse">
         <div class="card-body bgBlue text-white">
           <section class="testimonials">
             <div class="row">
               <div class="testimonials-col">
                 <img src="{{ item.usuario.foto }}" />
 
-                <div  class="nomefeed mt-4">
+                <div class="nomefeed mt-4">
                   <h3 class="font-20">{{ item.usuario.nome }}</h3>
                   <p class="card-text">
                     <small class="text-muted"
                       >{{ item.data | date: "dd/MM/yyyy" }} às
                       {{ item.data | date: "HH:mm" }}</small
                     >
+                  </p>
                 </div>
               </div>
             </div>
